reflect-demo/tests/errors/invalid_reflect_field_type_generic.rs
#[derive(reflect::Input)]
struct MyStruct {
    field: Vec<u32>,
}

fn main() {}
